crates/pixi_build_cmake/src/snapshots/pixi_build_cmake__build_script__test__build_script@unix-no-extra-args.snap
---
source: crates/pixi_build_cmake/src/build_script.rs
expression: script
---
ninja --version
cmake --version

PYTHON_ARG=
if [ -x "$PYTHON" ]; then
    PYTHON_ARG=-DPython_EXECUTABLE="$PYTHON"
fi
if [ ! -f "build/build.ninja" ]; then
    mkdir -p pixi-discovery
    cat > pixi-discovery/pixi-provider.cmake <<'EOF'
# Generated by pixi-build-cmake for the dependency discovery run.
set(PIXI_FIND_LOG "${CMAKE_CURRENT_LIST_DIR}/pixi-find-package.log" CACHE INTERNAL "")
file(WRITE "${PIXI_FIND_LOG}" "")
macro(pixi_provide_dependency method package_name)
set(_pixi_args "")
set(_pixi_kind optional)
foreach(_pixi_arg IN ITEMS ${ARGN})
if(_pixi_arg STREQUAL "REQUIRED")
set(_pixi_kind required)
else()
list(APPEND _pixi_args "${_pixi_arg}")
endif()
endforeach()
find_package(${package_name} ${_pixi_args} BYPASS_PROVIDER QUIET)
if(${package_name}_FOUND)
file(APPEND "${PIXI_FIND_LOG}" "found ${_pixi_kind} ${package_name}\n")
else()
file(APPEND "${PIXI_FIND_LOG}" "missing ${_pixi_kind} ${package_name}\n")
if(NOT TARGET ${package_name}::${package_name})
add_library(${package_name}::${package_name} INTERFACE IMPORTED GLOBAL)
endif()
set(${package_name}_FOUND TRUE)
endif()
endmacro()
cmake_language(SET_DEPENDENCY_PROVIDER pixi_provide_dependency
    SUPPORTED_METHODS FIND_PACKAGE)
EOF
    cmake $CMAKE_ARGS \
        -GNinja \
        -S "my-prefix-dir" \
        -B pixi-discovery \
        -DCMAKE_PROJECT_TOP_LEVEL_INCLUDES="$(pwd)/pixi-discovery/pixi-provider.cmake" > pixi-discovery/configure.log 2>&1 \
        || echo "stopped" >> pixi-discovery/pixi-find-package.log
    grep '^missing ' pixi-discovery/pixi-find-package.log 2>/dev/null \
        | sed 's/^missing \([^ ]*\) \(.*\)/pixi-build-cmake: \2 (\1) was not found/'
fi

mkdir -p build
pushd build

mkdir -p .cmake/api/v1/query/client-pixi-build-cmake
cat > .cmake/api/v1/query/client-pixi-build-cmake/query.json <<'EOF'
{"requests":[{"kind":"codemodel","version":2},{"kind":"cmakeFiles","version":1}]}
EOF

cat > pixi-configure-args.new <<'EOF'

EOF
if [ ! -f "build.ninja" ] || ! cmp -s pixi-configure-args pixi-configure-args.new; then
    cat > conda-toolchain.cmake <<'EOF'
# Generated by pixi-build-cmake: the compilers of the build environment.
if(NOT "$ENV{CXX}" STREQUAL "")
set(CMAKE_CXX_COMPILER "$ENV{CXX}")
endif()
EOF
    cmake $CMAKE_ARGS \
        -DCMAKE_TOOLCHAIN_FILE="$(pwd)/conda-toolchain.cmake" \
        -GNinja \
        -S "my-prefix-dir" \
        -DCMAKE_BUILD_TYPE=Release \
        -DCMAKE_INSTALL_PREFIX="$PREFIX" \
        -DCMAKE_EXPORT_COMPILE_COMMANDS=ON \
        -DBUILD_SHARED_LIBS=ON \
        ${PYTHON_ARG:+"$PYTHON_ARG"}
    mv pixi-configure-args.new pixi-configure-args
else
    rm -f pixi-configure-args.new
fi

if [ -f "build.ninja" ] && ! ninja -t query install > /dev/null 2>&1; then
    echo "pixi-build-cmake: the project has no install() rules, so the package would hold no files." >&2
    echo "pixi-build-cmake: add an install() call to CMakeLists.txt naming what the package should ship." >&2
    exit 1
fi

cmake --build . --target install
