crates/pixi_build_cmake/src/snapshots/pixi_build_cmake__build_script__test__build_script@unix-with-extra-args.snap
---
source: crates/pixi_build_cmake/src/build_script.rs
expression: script
---
ninja --version
cmake --version

PYTHON_ARG=
if [ -x "$PYTHON" ]; then
    PYTHON_ARG=-DPython_EXECUTABLE="$PYTHON"
fi
mkdir -p build
pushd build

mkdir -p .cmake/api/v1/query/client-pixi-build-cmake
cat > .cmake/api/v1/query/client-pixi-build-cmake/query.json <<'EOF'
{"requests":[{"kind":"codemodel","version":2},{"kind":"cmakeFiles","version":1}]}
EOF

if [ ! -f "build.ninja" ]; then
    cat > conda-toolchain.cmake <<'EOF'
# Generated by pixi-build-cmake: the compilers of the build environment.
if(NOT "$ENV{CXX}" STREQUAL "")
set(CMAKE_CXX_COMPILER "$ENV{CXX}")
endif()
EOF
    cmake $CMAKE_ARGS \
        -DCMAKE_TOOLCHAIN_FILE="$(pwd)/conda-toolchain.cmake" \
        -GNinja \
        -S "my-prefix-dir" \
        -DCMAKE_BUILD_TYPE=Release \
        -DCMAKE_INSTALL_PREFIX="$PREFIX" \
        -DCMAKE_EXPORT_COMPILE_COMMANDS=ON \
        -DBUILD_SHARED_LIBS=ON \
        ${PYTHON_ARG:+"$PYTHON_ARG"} \
        test-arg
fi

cmake --build . --target install
