crates/pixi_build_cmake/src/snapshots/pixi_build_cmake__build_script__test__build_script@windows-no-extra-args.snap
---
source: crates/pixi_build_cmake/src/build_script.rs
expression: script
---
ninja --version
cmake --version

set PYTHON_ARG=
if exist "%PYTHON%" set PYTHON_ARG=-DPython_EXECUTABLE="%PYTHON%"
if not exist build\build.ninja (
    if not exist pixi-discovery mkdir pixi-discovery
    >pixi-discovery\pixi-provider.cmake echo # Generated by pixi-build-cmake for the dependency discovery run.
    >>pixi-discovery\pixi-provider.cmake echo set^(PIXI_FIND_LOG "${CMAKE_CURRENT_LIST_DIR}/pixi-find-package.log" CACHE INTERNAL ""^)
    >>pixi-discovery\pixi-provider.cmake echo file^(WRITE "${PIXI_FIND_LOG}" ""^)
    >>pixi-discovery\pixi-provider.cmake echo macro^(pixi_provide_dependency method package_name^)
    >>pixi-discovery\pixi-provider.cmake echo set^(_pixi_args ""^)
    >>pixi-discovery\pixi-provider.cmake echo set^(_pixi_kind optional^)
    >>pixi-discovery\pixi-provider.cmake echo foreach^(_pixi_arg IN ITEMS ${ARGN}^)
    >>pixi-discovery\pixi-provider.cmake echo if^(_pixi_arg STREQUAL "REQUIRED"^)
    >>pixi-discovery\pixi-provider.cmake echo set^(_pixi_kind required^)
    >>pixi-discovery\pixi-provider.cmake echo else^(^)
    >>pixi-discovery\pixi-provider.cmake echo list^(APPEND _pixi_args "${_pixi_arg}"^)
    >>pixi-discovery\pixi-provider.cmake echo endif^(^)
    >>pixi-discovery\pixi-provider.cmake echo endforeach^(^)
    >>pixi-discovery\pixi-provider.cmake echo find_package^(${package_name} ${_pixi_args} BYPASS_PROVIDER QUIET^)
    >>pixi-discovery\pixi-provider.cmake echo if^(${package_name}_FOUND^)
    >>pixi-discovery\pixi-provider.cmake echo file^(APPEND "${PIXI_FIND_LOG}" "found ${_pixi_kind} ${package_name}\n"^)
    >>pixi-discovery\pixi-provider.cmake echo else^(^)
    >>pixi-discovery\pixi-provider.cmake echo file^(APPEND "${PIXI_FIND_LOG}" "missing ${_pixi_kind} ${package_name}\n"^)
    >>pixi-discovery\pixi-provider.cmake echo if^(NOT TARGET ${package_name}::${package_name}^)
    >>pixi-discovery\pixi-provider.cmake echo add_library^(${package_name}::${package_name} INTERFACE IMPORTED GLOBAL^)
    >>pixi-discovery\pixi-provider.cmake echo endif^(^)
    >>pixi-discovery\pixi-provider.cmake echo set^(${package_name}_FOUND TRUE^)
    >>pixi-discovery\pixi-provider.cmake echo endif^(^)
    >>pixi-discovery\pixi-provider.cmake echo endmacro^(^)
    >>pixi-discovery\pixi-provider.cmake echo cmake_language^(SET_DEPENDENCY_PROVIDER pixi_provide_dependency
    >>pixi-discovery\pixi-provider.cmake echo     SUPPORTED_METHODS FIND_PACKAGE^)
    cmake %CMAKE_ARGS% ^
        -GNinja ^
        -S "my-prefix-dir" ^
        -B pixi-discovery ^
        -DCMAKE_PROJECT_TOP_LEVEL_INCLUDES="%CD%\pixi-discovery\pixi-provider.cmake" > pixi-discovery\configure.log 2>&1
    if errorlevel 1 echo stopped>> pixi-discovery\pixi-find-package.log
    findstr /b "missing" pixi-discovery\pixi-find-package.log > nul 2>&1 && echo pixi-build-cmake: packages the project looked for and did not find: & findstr /b "missing" pixi-discovery\pixi-find-package.log
)

if not exist build mkdir build
pushd build

if not exist .cmake\api\v1\query\client-pixi-build-cmake mkdir .cmake\api\v1\query\client-pixi-build-cmake
>.cmake\api\v1\query\client-pixi-build-cmake\query.json echo {"requests":[{"kind":"codemodel","version":2},{"kind":"cmakeFiles","version":1}]}

if not exist build.ninja (
    >conda-toolchain.cmake echo # Generated by pixi-build-cmake: the compilers of the build environment.
    >>conda-toolchain.cmake echo if^(NOT "$ENV{CXX}" STREQUAL ""^)
    >>conda-toolchain.cmake echo set^(CMAKE_CXX_COMPILER "$ENV{CXX}"^)
    >>conda-toolchain.cmake echo endif^(^)
    cmake %CMAKE_ARGS% ^
        -DCMAKE_TOOLCHAIN_FILE="%CD%\conda-toolchain.cmake" ^
        -GNinja ^
        -S "my-prefix-dir" ^
        -DCMAKE_BUILD_TYPE=Release ^
        -DCMAKE_INSTALL_PREFIX="%LIBRARY_PREFIX%" ^
        -DCMAKE_EXPORT_COMPILE_COMMANDS=ON ^
        -DBUILD_SHARED_LIBS=ON ^
        %PYTHON_ARG%
    @if errorlevel 1 exit 1
)

if exist build.ninja (
    ninja -t query install > nul 2>&1
    if errorlevel 1 (
        echo pixi-build-cmake: the project has no install^(^) rules, so the package would hold no files. 1>&2
        echo pixi-build-cmake: add an install^(^) call to CMakeLists.txt naming what the package should ship. 1>&2
        exit 1
    )
)

cmake --build . --target install
@if errorlevel 1 exit 1
